// Stock Prediction Platform - Operational, Metadata & Audit Schemas
// Database: PostgreSQL 14
// Purpose: Runtime application data, configuration tracking, and compliance


//===================================================================
// SCHEMA: metadata - Configuration & Pipeline Tracking
//===================================================================


Table metadata.etl_pipelines {
  pipeline_id SERIAL [pk, increment]
  pipeline_name VARCHAR(100) [unique, not null]
  description TEXT
  schedule VARCHAR(100) [note: 'Cron expression: 0 16 * * 1-5']
  source_schema VARCHAR(100) [note: 'data_lake']
  target_schema VARCHAR(100) [note: 'data_warehouse']
  transformation_script VARCHAR(500) [note: 'Path to transform script']
  depends_on_pipeline_id INT [ref: > metadata.etl_pipelines.pipeline_id, note: 'Parent pipeline that must complete first']
  timeout_minutes INT [default: 60]
  is_active BOOLEAN [not null, default: true]
  status VARCHAR(20) [default: 'idle', note: 'idle, running, success, failed']
  last_run_start TIMESTAMP
  last_run_end TIMESTAMP
  last_run_status VARCHAR(20)
  last_run_duration_seconds INT
  last_run_records_processed INT
  next_scheduled_run TIMESTAMP
  created_at TIMESTAMP [not null, default: `now()`]
  updated_at TIMESTAMP [not null, default: `now()`]
  
  Indexes {
    pipeline_name [name: 'idx_pipelines_name']
    is_active [name: 'idx_pipelines_active']
    status [name: 'idx_pipelines_status']
    next_scheduled_run [name: 'idx_pipelines_next_run']
  }
  
  Note: 'ETL pipeline definitions and execution tracking'
}

Table metadata.pipeline_runs {
  run_id SERIAL [pk, increment]
  pipeline_id INT [not null, ref: > metadata.etl_pipelines.pipeline_id]
  run_start TIMESTAMP [not null, default: `now()`]
  run_end TIMESTAMP
  status VARCHAR(20) [not null, default: 'running', note: 'running, success, failed, cancelled']
  records_read INT [default: 0]
  records_written INT [default: 0]
  records_failed INT [default: 0]
  error_message TEXT
  error_stack_trace TEXT
  execution_details JSONB [note: 'Step-by-step progress']
  triggered_by VARCHAR(50) [note: 'scheduler, manual, api, dependent_pipeline']
  triggered_by_user VARCHAR(100)
  
  Indexes {
    pipeline_id [name: 'idx_runs_pipeline']
    run_start [name: 'idx_runs_start']
    status [name: 'idx_runs_status']
  }
  
  Note: 'Historical log of all pipeline executions'
}


//===================================================================
// SCHEMA: audit - Compliance & Security Tracking
//===================================================================


Table audit.access_log {
  access_id SERIAL [pk, increment]
  username VARCHAR(100)
  resource VARCHAR(500) [not null, note: 'API endpoint or database table']
  action VARCHAR(50) [not null, note: 'SELECT, GET, POST, PUT, DELETE']
  access_status VARCHAR(20) [not null, note: 'success, denied, error']
  status_code INT [note: 'HTTP status code']
  ip_address INET [not null]
  user_agent TEXT
  request_method VARCHAR(10)
  request_path VARCHAR(500)
  request_query_params JSONB
  request_body_summary TEXT [note: 'Truncated/sanitized request body']
  response_time_ms INT
  error_message TEXT
  accessed_at TIMESTAMP [not null, default: `now()`]
  
  Indexes {
    accessed_at [name: 'idx_access_time']
    access_status [name: 'idx_access_status']
    resource [name: 'idx_access_resource']
    ip_address [name: 'idx_access_ip']
  }
  
  Note: 'API access log for security monitoring and analytics'
}

Table audit.system_logs {
  log_id SERIAL [pk, increment]
  log_level VARCHAR(10) [not null, note: 'DEBUG, INFO, WARNING, ERROR, CRITICAL']
  component VARCHAR(100) [not null, note: 'backend, pipeline, ml_inference, etc.']
  module VARCHAR(100) [note: 'Specific module/file name']
  message TEXT [not null]
  stack_trace TEXT
  metadata JSONB [note: 'Additional context']
  created_at TIMESTAMP [not null, default: `now()`]
  
  Indexes {
    log_level [name: 'idx_logs_level']
    component [name: 'idx_logs_component']
    created_at [name: 'idx_logs_created']
  }
  
  Note: 'Application logs for debugging and monitoring'
}


//===================================================================
// SCHEMA: DATA WAREHOUSE
//===================================================================


// ═════════════════════════════════════════════════════════
// STOCK PREDICTION DATA WAREHOUSE — UPGRADED ERD
// Medallion Architecture: Bronze → Silver → Gold → Platinum
// ═════════════════════════════════════════════════════════


// ─────────────────────────────────────────────
// BRONZE LAYER — raw ingestion
// ─────────────────────────────────────────────

Table data_warehouse.raw_ohlcv_prices {
  id            bigserial     [pk]
  ticker        varchar       [not null]
  trade_date    date          [not null]
  open          numeric(18,6) [not null]
  high          numeric(18,6) [not null]
  low           numeric(18,6) [not null]
  close         numeric(18,6) [not null]
  volume        bigint        [not null]
  ingested_at   timestamp     [not null, default: `now()`]

  indexes {
    (ticker, trade_date) [name: "idx_raw_ohlcv_ticker_date"]
  }
}


Table data_warehouse.raw_news_articles {
  article_id    uuid          [pk, default: `gen_random_uuid()`]
  tickers       varchar[]     [not null, note: "Array of mentioned tickers"]
  headline      text          [not null]
  body          text
  source        varchar       [not null]
  published_at  timestamp     [not null]
  lang          varchar(8)    [default: "en"]
  ingested_at   timestamp     [not null, default: `now()`]

  indexes {
    published_at [name: "idx_raw_news_published_at"]
  }
}


// ─────────────────────────────────────────────
// SILVER LAYER — cleansed & enriched (star schema)
// ─────────────────────────────────────────────

Table data_warehouse.dim_ticker {
  ticker_id     serial        [pk]
  symbol        varchar(20)   [not null, unique]
  company       varchar       [not null]
  sector        varchar
  industry      varchar
  exchange      varchar       [not null]
  currency      varchar(8)    [default: "USD"]
  is_active     boolean       [not null, default: true]
  listed_at     date
  delisted_at   date
  updated_at    timestamp     [default: `now()`]

  Note: "Slowly changing dimension for ticker metadata."
}

Table data_warehouse.dim_date {
  date_id         serial      [pk]
  trade_date      date        [not null, unique]
  year            smallint    [not null]
  quarter         smallint    [not null]
  month           smallint    [not null]
  week_of_year    smallint    [not null]
  day_of_week     varchar(12) [not null]
  day_of_month    smallint    [not null]
  is_trading_day  boolean     [not null, default: true]
  is_month_end    boolean     [not null, default: false]
  is_quarter_end  boolean     [not null, default: false]

  Note: "Pre-populated calendar table. is_trading_day excludes weekends and market holidays."
}



Table data_warehouse.fact_daily_prices {
  price_id      bigserial     [pk]
  ticker_id     int           [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id       int           [not null, ref: > data_warehouse.dim_date.date_id]
  open          numeric(18,6) [not null]
  high          numeric(18,6) [not null]
  low           numeric(18,6) [not null]
  close         numeric(18,6) [not null]
  adj_close     numeric(18,6) [not null, note: "Split and dividend adjusted"]
  volume        bigint        [not null]
  vwap          numeric(18,6)
  created_at    timestamp     [default: `now()`]

  indexes {
    (ticker_id, date_id) [unique, name: "uq_fact_prices_ticker_date"]
  }
}

Table data_warehouse.fact_news_articles {
  article_id    uuid          [pk, default: `gen_random_uuid()`]
  ticker_id     int           [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id       int           [not null, ref: > data_warehouse.dim_date.date_id]
  headline      text          [not null]
  body_clean    text          [note: "HTML stripped, normalized whitespace"]
  published_at  timestamp     [not null]
  lang          varchar(8)    [default: "en"]
  word_count    int
  created_at    timestamp     [default: `now()`]

  indexes {
    (ticker_id, date_id)      [name: "idx_fact_news_ticker_date"]
    published_at              [name: "idx_fact_news_published_at"]
  }

  Note: "One row per ticker per article. An article mentioning 3 tickers produces 3 rows."
}


// ─────────────────────────────────────────────
// GOLD LAYER — ML-ready feature store & labels
// ─────────────────────────────────────────────

Table data_warehouse.feat_technical {
  id            bigserial     [pk]
  ticker_id     int           [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id       int           [not null, ref: > data_warehouse.dim_date.date_id]

  // Moving averages (price level)
  sma_5         numeric(18,6)
  sma_10        numeric(18,6)
  sma_20        numeric(18,6)
  sma_50        numeric(18,6)
  ema_12        numeric(18,6)
  ema_26        numeric(18,6)

  // Momentum
  rsi_14        numeric(8,4)  [note: "RSI computed on lagged close diff — no future leakage"]
  macd          numeric(18,8) [note: "(ema12 - ema26) / close, shifted(1)"]
  macd_signal   numeric(18,8) [note: "EWM(span=9) of macd, shifted(1)"]
  macd_hist     numeric(18,8) [note: "macd - macd_signal, shifted(1)"]

  // Volatility & bands
  boll_upper    numeric(18,6)
  boll_lower    numeric(18,6)
  boll_mid      numeric(18,6)
  atr_14        numeric(18,6)

  // ── NEW ──
  bb_position   numeric(12,8) [note: "(close - (bb_mean - 2*bb_std)) / (4*bb_std), shifted(1). Normalized 0-1 position within the band"]

  // Volume
  obv           bigint
  vwap          numeric(18,6)

  computed_at   timestamp     [default: `now()`]

  indexes {
    (ticker_id, date_id) [unique, name: "uq_feat_tech_ticker_date"]
  }

  Note: "Pre-computed from fact_daily_prices. Recomputed nightly. All shifted features are lagged to prevent leakage."
}


Table data_warehouse.feat_price_dynamics {
  id               bigserial   [pk]
  ticker_id        int         [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id          int         [not null, ref: > data_warehouse.dim_date.date_id]

  // Raw return (base for all lag/momentum features)
  return_1d        numeric(12,8) [note: "close.pct_change() — current day, used to derive lags"]

  // Lagged returns — shift(n) of return_1d
  // ── NEW ──
  lag_1            numeric(12,8) [note: "return.shift(1)"]
  lag_2            numeric(12,8) [note: "return.shift(2)"]
  lag_3            numeric(12,8) [note: "return.shift(3)"]
  lag_7            numeric(12,8) [note: "return.shift(7)"]
  lag_20           numeric(12,8) [note: "return.shift(20)"]

  // Multi-horizon returns (existing)
  return_5d        numeric(12,8)
  return_20d       numeric(12,8)
  log_return_1d    numeric(12,8)

  // Rolling return averages (moving averages of return, not price)
  // ── NEW ──
  ma7              numeric(12,8) [note: "return.rolling(7).mean()"]
  ma30             numeric(12,8) [note: "return.rolling(30).mean()"]

  // Momentum (return minus lagged return)
  // ── NEW ──
  momentum_3       numeric(12,8) [note: "return - return.shift(3)"]
  momentum_7       numeric(12,8) [note: "return - return.shift(7)"]

  // Rolling volatility of returns
  // ── NEW ──  (vol_7d matches your code's df['volatility'])
  vol_7d           numeric(12,8) [note: "return.rolling(7).std() — matches df['volatility'] in feature pipeline"]
  vol_5d           numeric(12,8) [note: "return.rolling(5).std()"]
  vol_20d          numeric(12,8) [note: "return.rolling(20).std()"]

  // Volatility of volatility
  // ── NEW ──
  vol_of_vol       numeric(12,8) [note: "vol_7d.rolling(7).std().shift(1)"]

  // Relative price signals
  price_vs_sma50   numeric(12,8) [note: "(close - sma50) / sma50"]
  hl_spread        numeric(12,8) [note: "(high - low) / close — intraday range vs close"]

  // ── NEW ──  (distinct from hl_spread: denominator is low, and lagged)
  daily_range      numeric(12,8) [note: "((high - low) / low).shift(1)"]

  gap_open         numeric(12,8) [note: "(open - prev_close) / prev_close"]

  // Volume signals
  volume_ratio     numeric(12,8) [note: "volume / avg_volume_20d"]
  rel_volume       numeric(12,8)

  // ── NEW ──
  volume_change    numeric(12,8) [note: "volume.pct_change().shift(1)"]

  computed_at      timestamp   [default: `now()`]

  indexes {
    (ticker_id, date_id) [unique, name: "uq_feat_dyn_ticker_date"]
  }

  Note: "Derived from fact_daily_prices. All shift(n) features are pre-applied at write time — no further shifting needed at training time."
}


Table data_warehouse.feat_news_sentiment {
  id               bigserial   [pk]
  ticker_id        int         [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id          int         [not null, ref: > data_warehouse.dim_date.date_id]
  article_id       varchar     [not null, ref: > data_warehouse.fact_news_articles.article_id]

  // Article volume
  analysis_summary TEXT

  // Aggregated sentiment (output of NLP model)
  sentiment_score  numeric(6,4)   [note: "-1.0 to 1.0, mean over daily articles"]
  sentiment_label  varchar(12)    [note: "UP | DOWN | CONSTANT"]

  // Relevance
  relevance    int   [note: "Model confidence that article is stock-relevant"]

  computed_at      timestamp   [default: `now()`]

  indexes {
    (ticker_id, date_id) [unique, name: "uq_feat_sent_ticker_date"]
  }

}


// ─────────────────────────────────────────────
// PLATINUM LAYER — Prediction Serving Layer
// Stock Prediction Platform
// ─────────────────────────────────────────────


// ── Model Registry ──

Table data_warehouse.model_registry {
  model_id uuid [pk, default: `gen_random_uuid()`]
  model_name varchar [not null, note: 'e.g. xgboost_v3_regression']
  model_type varchar [not null, note: 'regression | classification']
  version varchar [not null, note: 'e.g. 3.1.0']
  horizon_days int [not null, note: '1 | 5 | 20']
  algorithm varchar [note: 'XGBoost | LSTM | LightGBM | RandomForest | BERT']
  feature_set varchar [note: 'price_only | price+news | news_only']
  training_start_date date
  training_end_date date
  is_champion boolean [default: false, note: 'Active production model flag']
  registered_at timestamp [default: `now()`]
  notes text

  indexes {
    (model_type, horizon_days, is_champion) [name: 'idx_champion_model']
    model_name [name: 'idx_model_name']
  }
}

// ── Regression Predictions ──

Table data_warehouse.predictions_regression {
  pred_id uuid [pk, default: `gen_random_uuid()`]
  ticker_id int [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id int [not null, ref: > data_warehouse.dim_date.date_id]
  model_id uuid [not null, ref: > data_warehouse.model_registry.model_id]
  horizon_days int [not null, note: '1 | 5 | 20 — days ahead predicted']

  // Prediction outputs
  pred_close numeric(12,4) [note: 'Predicted closing price']
  pred_return numeric(10,6) [note: 'Predicted % return']
  pred_log_return numeric(10,6)
  confidence_lo numeric(12,4) [note: 'Lower bound of prediction interval']
  confidence_hi numeric(12,4) [note: 'Upper bound of prediction interval']
  confidence_level numeric(5,2) [default: 0.95, note: 'e.g. 0.95 for 95% CI']

  // Actuals (filled in post-hoc by the backtesting job)
  actual_close numeric(12,4) [null]
  actual_return numeric(10,6) [null]
  mae numeric(10,6) [null, note: 'Filled after outcome is known']
  rmse numeric(10,6) [null]

  // Metadata — immutable after insert
  predicted_at timestamp [not null, default: `now()`]
  prediction_date date [not null, note: 'Calendar date prediction was made']
  target_date date [not null, note: 'Date being predicted']
  data_version varchar [note: 'Gold snapshot version used for inference']

  indexes {
    (ticker_id, date_id, horizon_days, model_id) [unique, name: 'uq_pred_reg']
    (ticker_id, prediction_date) [name: 'idx_pred_reg_ticker_date']
    model_id [name: 'idx_pred_reg_model']
    predicted_at [name: 'idx_pred_reg_ts']
  }

  note: 'Append-only. Never update existing rows — insert new rows on retrain.'
}

// ── Classification Predictions ──

Table data_warehouse.predictions_classification {
  pred_id uuid [pk, default: `gen_random_uuid()`]
  ticker_id int [not null, ref: > data_warehouse.dim_ticker.ticker_id]
  date_id int [not null, ref: > data_warehouse.dim_date.date_id]
  model_id uuid [not null, ref: > data_warehouse.model_registry.model_id]
  horizon_days int [not null, note: '1 | 5 | 20']

  // Prediction outputs
  pred_direction smallint [not null, note: '1 = Up | 0 = Flat | -1 = Down']
  prob_up numeric(6,4) [not null, note: 'Probability score 0-1']
  prob_flat numeric(6,4) [not null]
  prob_down numeric(6,4) [not null]
  pred_confidence numeric(6,4) [note: 'max(prob_up, prob_flat, prob_down)']
  is_high_confidence boolean [note: 'True if confidence > threshold (e.g. 0.70)']

  // Actuals (filled post-hoc)
  actual_direction smallint [null, note: '1 | 0 | -1 — filled after outcome materialises']
  is_correct boolean [null]

  // Metadata — immutable after insert
  predicted_at timestamp [not null, default: `now()`]
  prediction_date date [not null]
  target_date date [not null]
  data_version varchar

  indexes {
    (ticker_id, date_id, horizon_days, model_id) [unique, name: 'uq_pred_cls']
    (ticker_id, prediction_date) [name: 'idx_pred_cls_ticker_date']
    model_id [name: 'idx_pred_cls_model']
    (pred_direction, is_high_confidence) [name: 'idx_pred_cls_signal']
  }

  note: 'Append-only. prob_up + prob_flat + prob_down must sum to 1.0 (enforce via CHECK).'
}

// ── Model Performance (Backtesting & Drift Monitoring) ──

Table data_warehouse.model_performance {
  perf_id uuid [pk, default: `gen_random_uuid()`]
  model_id uuid [not null, ref: > data_warehouse.model_registry.model_id]
  ticker_id int [ref: > data_warehouse.dim_ticker.ticker_id, note: 'null = aggregate across all tickers']
  model_type varchar [not null, note: 'Classification | Regression']
  eval_start_date date
  eval_end_date date
  horizon_days int [not null]
  n_samples int [not null, note: 'Number of predictions evaluated']

  

  
 
  evaluated_at timestamp [default: `now()`]

  indexes {
    (model_id, evaluated_at, horizon_days) [name: 'idx_perf_model_date']
    ticker_id [name: 'idx_perf_ticker']
  }
}

Table data_warehouse.classification_model_performance {
  perf_id uuid [not null, ref: > data_warehouse.model_performance.perf_id]
  accuracy numeric(6,4)
  precision_score numeric(6,4)
  recall numeric(6,4)
  f1_score numeric(6,4)
  auc_roc numeric(6,4)
  log_loss numeric(10,6)
}

Table data_warehouse.regression_model_performance {
  perf_id uuid [not null, ref: > data_warehouse.model_performance.perf_id]
  mae numeric(10,6)
  rmse numeric(10,6)
}
